--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
 
 
 h1 {
-    color:green;
+    color: green;
     font-size: 64px;
     padding: 10px;
 }
@@ -62,14 +62,19 @@ article img{
 }
 
 article p {
+      text-indent: 50px;
       font-size: 20px;
+      padding-top: 30px;
       padding-left: 10px;
+      padding-bottom: 30px;
       line-height: 2.0;
   }
 
 section p {
       font-size: 20px;
+      padding-top: 30px;
       padding-left: 10px;
+      padding-bottom: 30px;
       line-height: 2.0;
   }
 
@@ -93,5 +98,7 @@ section img {
 
 
 @media screen and (max-width: 480px) {
-
+  body { 
+    display: center;
+  }
 }
